# SchroedingerEquationSolver_HydrogenAtom

./: .gitattributes  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
app/: CMakeLists.txt
app/src/: atom_model.hpp  base_director.hpp  gpu_engine.hpp  gpu_orbital.hpp  gpucheck_main.cpp  hydrogen_director.hpp  imgui_ui.hpp  imgui_ui.ixx  main.cpp  qrhi_engine.hpp  qrhicheck_main.cpp  scenario.hpp  scheduler.hpp  scheduler.ixx  selftest_arcs.hpp  tunneling_director.hpp  vk_blobs.hpp  vk_compute.hpp  vk_device.hpp  vk_engine.hpp  vk_present.hpp  vk_render.hpp  vkcheck_main.cpp  vram_probe.hpp
app/src/qrhi_shaders/: conj_scale.comp  fft_line256.comp  fft_line64.comp  flow.vert  mean_force.comp  synth.comp  volume.frag
app/src/shaders/: blit.frag  blit.vert  damp_mul.comp  flow.frag  flow_velocity.comp  half_mul.comp  kin_mul.comp  mean_force.comp  particles.comp  phase_damp_mul.comp  slice.frag  slice.frag.slang  slice.vert  slice.vert.slang  vec.slang  volume.frag  volume.frag.slang
bench/: CMakeLists.txt  bench_main.cpp  gen_h2plus_atlas.cpp
core/: CMakeLists.txt
core/include/core/: complex.hpp  cross_section.hpp  decay.hpp  drive.hpp  emission.hpp  fft.hpp  field.hpp  harmonics.hpp  imaginary_time.hpp  marching_cubes.hpp  marching_cubes_tables.hpp  measurement.hpp  observables.hpp  potential.hpp  projection.hpp  propagator.hpp  rotation.hpp  sampling.hpp  simulation.hpp  spectral.hpp  sphere.hpp  wavepacket.hpp
core/src/: bloch.ixx  camera.ixx  colormap.ixx  complex.ixx  cross_section.ixx  decay.ixx  drive.ixx  emission.ixx  fft.ixx  field.ixx  flow.ixx  grid.ixx  harmonics.ixx  heightfield.ixx  imaginary_time.ixx  interference.ixx  ladder.ixx  lattice2d.ixx  magnetic.ixx  marching_cubes.ixx  mcwf1d.ixx  measurement.ixx  observables.ixx  parallel.ixx  phasor.ixx  potential.ixx  projection.ixx  propagator.ixx  radial.ixx  rotation.ixx  sampling.ixx  simulation.ixx  spectral.ixx  spectrum1d.ixx  sphere.ixx  spheroidal.ixx  spin.ixx  spinexact.ixx  spinlattice.ixx  vec.ixx  (+3 more)
docs/: ARCHITECTURE.md  GPU_PLAN.md  REVIEW_BACKLOG.md
scenario/: CMakeLists.txt
scenario/src/: anderson1d_director.ixx  atom_model.ixx  base_director.ixx  billiard2d_director.ixx  bloch1d_director.ixx  bouncer1d_director.ixx  carpet1d_director.ixx  corral2d_director.ixx  doubleslit2d_director.ixx  doublewell1d_director.ixx  harmonic1d_director.ixx  harmonic_director.ixx  hydrogen_director.ixx  kepler_seed.ixx  landau2d_director.ixx  lattice2d_director.ixx  line1d_director.ixx  manifold_spec.ixx  molecular_seed.ixx  molecule_director.ixx  morse1d_director.ixx  ptwell1d_director.ixx  qdot2d_director.ixx  qpc2d_director.ixx  rutherford3d_director.ixx  scenario.ixx  selftest_arcs.ixx  spin_director.ixx  spins_director.ixx  tunneling1d_director.ixx  tunneling_director.ixx
solver/: CMakeLists.txt
solver/shaders/: axpy.comp.slang  bridge_load.comp.slang  bridge_store.comp.slang  complex.slang  conj_scale.comp.slang  copy_state.comp.slang  damp_mul.comp.slang  dipole.comp.slang  dipole_kick.comp.slang  fft_line256.comp.slang  fft_line512.comp.slang  fft_line64.comp.slang  fft_line8.comp.slang  flow_velocity.comp.slang  grid.slang  half_mul.comp.slang  inner_product.comp.slang  kin_mul.comp.slang  mc_classify.comp.slang  mc_density.comp.slang  mc_emit.comp.slang  mc_scan.comp.slang  mcwf_axpy.comp.slang  mean_force.comp.slang  norm_finalize.comp.slang  norm_peak.comp.slang  pack_half.comp.slang  phase_damp_mul.comp.slang  phase_multiply.comp.slang  project_deposit.comp.slang  scale.comp.slang  scale_buf.comp.slang  shear.comp.slang  spin_bond_gate.comp.slang  spin_mf_measure.comp.slang  spin_site_bloch.comp.slang  spin_site_gate.comp.slang  synth.comp.slang  unpack_half.comp.slang  vec.slang  (+1 more)
solver/src/: engine_blobs.ixx  lattice2d_engine.ixx  spin_engine.ixx  vk_compute.ixx  vk_device.ixx  vk_engine.ixx  vkcheck_main.cpp  vma_impl.cpp  vram_probe.ixx
tests/: CMakeLists.txt  anderson1d_test.cpp  bloch_test.cpp  camera_test.cpp  carpet1d_test.cpp  complex_test.cpp  cross_section_test.cpp  decay_test.cpp  deflation_test.cpp  degenerate_guards_test.cpp  drive_test.cpp  dynamics3_test.cpp  emission_test.cpp  fft3_test.cpp  fft_test.cpp  field3_test.cpp  field_test.cpp  flow_test.cpp  grid3_test.cpp  grid_test.cpp  harmonic_dynamics_test.cpp  harmonics_test.cpp  ho2d_test.cpp  hydrogen3_test.cpp  imaginary_tables_test.cpp  imaginary_time_test.cpp  interference_test.cpp  lattice2d_test.cpp  magnetic_test.cpp  marching_cubes_test.cpp  mcwf1d_test.cpp  mcwf_test.cpp  measurement_test.cpp  molecular_seed_test.cpp  molecule_test.cpp  multichannel_decay_test.cpp  parallel_test.cpp  potential_test.cpp  projection_test.cpp  propagator_tables_test.cpp  (+20 more)
tools/: gdb-vscode.sh
tools/cmake/: bin2h.cmake  ses_slang.cmake  ses_vkfft.cmake
viz/: CMakeLists.txt
viz/shaders/: accum.comp.slang  blit.frag.slang  blit.vert.slang  bloom_down.comp.slang  bloom_up.comp.slang  compose.comp.slang  flow.frag.slang  flow.vert.slang  marker.frag.slang  mesh.frag.slang  mesh.vert.slang  occ_dilate.comp.slang  occupancy.comp.slang  overlay.frag.slang  overlay.vert.slang  particles.comp.slang  shadow.comp.slang  slice.frag.slang  slice.vert.slang  volume.frag.slang  volume.vert.slang
viz/src/: render_blobs.ixx  vk_present.ixx  vk_render.ixx
